# Progetto-Algoritmi-2018-2019

exercise_1/exercise_1/: CMakeLists.txt  common_inclusions.h  list_functions.c  list_functions.h  list_iterator.c  list_iterator.h  macros.h  merge.c  merge.h  test_list.c  test_utils.c  test_utils.h  types.h
exercise_1/exercise_1/Unity/: unity_internals.h
exercise_2/: pom.xml
exercise_2/src/main/java/: LennonDiff.java
exercise_2/src/main/java/editdistance/: EditDistance.java  EditDistanceResult.java
exercise_2/src/test/java/: LennonTest.java
exercise_2/src/test/java/editdistance/: EditDistanceTest.java
exercise_3/: pom.xml
exercise_3/src/test/java/unionfindset/: UnionFindSetTest.java
exercise_4/: pom.xml
exercise_4/src/main/java/: ItalianDistGraph.java
exercise_4/src/main/java/csvloader/: CsvLoader.java
exercise_4/src/main/java/graph/: MinimumSpanningTree.java
exercise_4/src/main/java/graph/exceptions/: GraphEdgeMissingException.java
exercise_4/src/main/java/graph/structures/: Edge.java  Graph.java  Node.java
exercise_4/src/test/java/graph/: DirectedGraphTest.java  EdgeTest.java  NodeTest.java  UndirectedGraphTest.java
exercise_4/src/test/java/mst/: MinimumSpanningTreeTest.java
